<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="8dp"
        android:id="@+id/linearLayout">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="2"
            android:maxLines="1"
            android:textSize="18sp"
            android:text="@string/Picture"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="2"
            android:ellipsize="end"
            android:maxLines="1"
            android:textSize="18sp"
            android:text="@string/Name"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:maxLines="1"
            android:gravity="center"
            android:ellipsize="end"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/Price"/>
        <TextView
            android:layout_width="0dp"
            android:gravity="center"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textSize="18sp"
            android:text="@string/Quantity"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="2"
            android:maxLines="1"
            android:textSize="18sp"
            android:text="@string/sale"/>
    </LinearLayout>
    <ListView
        android:id="@+id/inventory_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:layout_below="@+id/empty"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">
    </ListView>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="31dp"
        android:layout_marginRight="28dp"
        android:layout_marginEnd="28dp"
        android:layout_gravity="end|bottom"
        android:src="@drawable/plus"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/linearLayout"
        android:layout_alignEnd="@+id/linearLayout" />
    <TextView
        android:id="@+id/empty"
        android:text="@string/empty_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textAppearance="?android:textAppearanceMedium"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>